Build results of 8996a09 (on master)

--- a/weaver.ini
+++ b/weaver.ini
@@ -8,16 +8,28 @@
 
 [Generic / SYNOPSIS]
 [Generic / DESCRIPTION]
+[Generic / IMPL]
+header = IMPLEMENTATION DETAILS
+
 [Generic / OVERVIEW]
 
 ;[Generic / METHODS]
 ;[Collect / METHODS]
+;
+[Collect / CONSTRUCTOR_ARGUMENTS]
+header = CONSTRUCTOR ARGUMENTS
+command = carg
+
 [Collect / METHODS]
 command = method
 
 
 [Collect / ATTRIBUTES]
 command = attr
+
+[Collect / AHANDLES]
+command = ahandle
+header = ATTRIBUTE HANDLES
 
 ;[Collect / FILTER_METHODS]
 ;header = FILTER METHODS
