Build results of 90c8d47 (on master)

--- a/weaver.ini
+++ b/weaver.ini
@@ -31,6 +31,24 @@ command = attr
 command = ahandle
 header = ATTRIBUTE HANDLES
 
+[Collect / PCONSTRUCTOR_ARGUMENTS]
+header = PRIVATE CONSTRUCTOR ARGUMENTS
+command = pcarg
+
+[Collect / PMETHODS]
+header = PRIVATE METHODS
+command = pmethod
+
+
+[Collect / PATTRIBUTES]
+header = PRIVATE ATTRIBUTES
+command = pattr
+
+[Collect / PAHANDLES]
+command = pahandle
+header = PRIVATE ATTRIBUTE HANDLES
+
+
 ;[Collect / FILTER_METHODS]
 ;header = FILTER METHODS
 ;command = filter
