--- a/META.yml
+++ b/META.yml
@@ -31,6 +31,7 @@ requires:
   Digest::MD5: 0
   Digest::SHA1: 0
   List::Util: 0
+  Moo: 0
   Moose: 0
   MooseX::AttributeShortcuts: 0
   MooseX::Types::Moose: 0
@@ -52,6 +53,7 @@ x_BuiltWith:
     File::Temp: 0.22
     List::Util: 1.27
     Module::Build: 0.4003
+    Moo: 1.000007
     Moose: 2.0604
     MooseX::AttributeShortcuts: 0.017
     MooseX::Types::Moose: 0.35
