Build results of 28701f2 (on master)

--- a/META.yml
+++ b/META.yml
@@ -28,6 +28,7 @@ provides:
     file: lib/Set/Associate/RefillItems.pm
     version: 0.001000
 requires:
+  Carp: 0
   Digest::MD5: 0
   Digest::SHA1: 0
   List::Util: 0
@@ -43,6 +44,7 @@ resources:
 version: 0.001000
 x_BuiltWith:
   modules:
+    Carp: 1.28
     Digest::MD5: 2.52
     Digest::SHA1: 2.13
     Dist::Zilla::PluginBundle::Author::KENTNL: 1.7.0
