Build results of 8b2e4e2 (on master)

--- a/weaver.ini
+++ b/weaver.ini
@@ -20,9 +20,12 @@ header = IMPLEMENTATION DETAILS
 header = CONSTRUCTOR ARGUMENTS
 command = carg
 
+[Collect / CLASS_METHODS]
+command = cmethod
+header = CLASS METHODS
+
 [Collect / METHODS]
 command = method
-
 
 [Collect / ATTRIBUTES]
 command = attr
