--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -1,5 +1,5 @@
 severity = 1
-exclude = RequireTidyCode RequirePodSections ProhibitPostfixControls RequireRcsKeywords RequireExplicitPackage ProhibitVersionStrings RequireArgUnpacking RequireFinalReturn
+exclude = RequireTidyCode RequirePodSections ProhibitPostfixControls RequireRcsKeywords RequireExplicitPackage ProhibitVersionStrings RequireArgUnpacking RequireFinalReturn Variables::ProtectPrivateVars ProtectPrivateSubs
 include = Moose::ProhibitMultipleWiths Moose::ProhibitNewMethod Moose::RequireCleanNamespace Moose::RequireMakeImmutable
 color = 1
 verbose = 9
@@ -16,7 +16,7 @@ stop_words =
 private_name_regex = _(?!build_)\w
 
 [TestingAndDebugging::RequireUseStrict]
-equivalent_modules = Moose
+equivalent_modules = Moose v5.16
 
 [TestingAndDebugging::RequireUseWarnings]
 equivalent_modules = Moose
