Build results of 4038d10 (on master)

--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,6 @@ build_requires:
   File::Temp: 0
   Module::Build: 0.4003
   Test::More: 0.98
-  strict: 0
 configure_requires:
   Module::Build: 0.4003
 dynamic_config: 0
@@ -20,13 +19,16 @@ name: Set-Associate
 provides:
   Set::Associate:
     file: lib/Set/Associate.pm
-    version: 0.001001
+    version: 0.002000
   Set::Associate::NewKey:
     file: lib/Set/Associate/NewKey.pm
-    version: 0.001001
+    version: 0.002000
   Set::Associate::RefillItems:
     file: lib/Set/Associate/RefillItems.pm
-    version: 0.001001
+    version: 0.002000
+  Set::Associate::Utils:
+    file: lib/Set/Associate/Utils.pm
+    version: 0.002000
 requires:
   Carp: 0
   Digest::MD5: 0
@@ -36,12 +38,13 @@ requires:
   Scalar::Util: 0
   bigint: 0
   perl: v5.16.0
+  strict: 0
   warnings: 0
 resources:
   bugtracker: https://github.com/kentfredric/Set-Associate/issues
   homepage: https://github.com/kentfredric/Set-Associate
   repository: https://github.com/kentfredric/Set-Associate.git
-version: 0.001001
+version: 0.002000
 x_BuiltWith:
   modules:
     Carp: 1.28
