--- a/META.yml
+++ b/META.yml
@@ -5,13 +5,13 @@ author:
 build_requires:
   File::Find: 0
   File::Temp: 0
-  Module::Build: 0.4003
+  Module::Build: 0.4005
   Test::Fatal: 0
   Test::More: 0.98
 configure_requires:
-  Module::Build: 0.4003
+  Module::Build: 0.4005
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300031, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,43 +20,43 @@ name: Set-Associate
 provides:
   Set::Associate:
     file: lib/Set/Associate.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::NewKey:
     file: lib/Set/Associate/NewKey.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::NewKey::HashMD5:
     file: lib/Set/Associate/NewKey/HashMD5.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::NewKey::HashSHA1:
     file: lib/Set/Associate/NewKey/HashSHA1.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::NewKey::LinearWrap:
     file: lib/Set/Associate/NewKey/LinearWrap.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::NewKey::PickOffset:
     file: lib/Set/Associate/NewKey/PickOffset.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::NewKey::RandomPick:
     file: lib/Set/Associate/NewKey/RandomPick.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::RefillItems:
     file: lib/Set/Associate/RefillItems.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::RefillItems::Linear:
     file: lib/Set/Associate/RefillItems/Linear.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::RefillItems::Shuffle:
     file: lib/Set/Associate/RefillItems/Shuffle.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::Role::NewKey:
     file: lib/Set/Associate/Role/NewKey.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::Role::RefillItems:
     file: lib/Set/Associate/Role/RefillItems.pm
-    version: 0.003000
+    version: 0.003001
   Set::Associate::Utils:
     file: lib/Set/Associate/Utils.pm
-    version: 0.003000
+    version: 0.003001
 requires:
   Carp: 0
   Digest::MD5: 0
@@ -74,60 +74,62 @@ resources:
   bugtracker: https://github.com/kentfredric/Set-Associate/issues
   homepage: https://github.com/kentfredric/Set-Associate
   repository: https://github.com/kentfredric/Set-Associate.git
-version: 0.003000
+version: 0.003001
 x_BuiltWith:
   modules:
     Carp: 1.28
     Digest::MD5: 2.52
     Digest::SHA1: 2.13
-    Dist::Zilla::PluginBundle::Author::KENTNL: 1.7.0
+    Dist::Zilla::PluginBundle::Author::KENTNL: 1.7.3
     Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 'NA(possibly not installed)'
     File::Find: 1.23
-    File::Temp: 0.22_90
+    File::Temp: 0.2301
     List::Util: 1.27
-    Module::Build: 0.4003
-    Moose: 2.0604
-    MooseX::AttributeShortcuts: 0.017
+    Module::Build: 0.4005
+    Moose: 2.0802
+    MooseX::AttributeShortcuts: 0.019
     MooseX::Role::Parameterized: 1.00
     Pod::Coverage::TrustPod: 0.100002
     Scalar::Util: 1.27
-    Test::CPAN::Meta: 0.22
+    Test::CPAN::Changes: 0.20
+    Test::CPAN::Meta: 0.23
     Test::Fatal: 0.010
     Test::More: 0.98
-    Test::Pod: 1.46
+    Test::Pod: 1.48
     Test::Pod::Coverage: 1.08
     bigint: 0.32
     perl: 'NA(skipped: perl)'
     strict: 1.07
-    version: 0.9901
-    warnings: 1.16
+    version: 0.9902
+    warnings: 1.18
   perl:
-    original: v5.17.9
+    original: v5.17.11
     qv: 1
     version:
       - 5
       - 17
-      - 9
+      - 11
   perl-config:
     gccversion: 4.7.2
-    git_commit_id: 012528a99df1906d6feaaaf05657a53374aebc46
-    git_describe: v5.17.8-156-g012528a
+    git_commit_date: '2013-04-07 06:25:53 +1200'
+    git_commit_id: 7407006866c3e2c938b43f0bf5ca84431424d65c
+    git_describe: v5.17.10-54-g7407006
     myarchname: x86_64-linux
     osname: linux
   platform: linux
-  uname: 'Linux 3.8.2-gentoo x86_64 GenuineIntel GNU/Linux'
+  uname: 'Linux 3.9.0-gentoo x86_64 GenuineIntel GNU/Linux'
 x_Dist_Zilla:
   perl:
-    version: 5.017009
+    version: 5.017011
   plugins:
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::KENTNL/Git::NextVersion'
-      version: 2.009
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::KENTNL/MetaConfig'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::KENTNL/GithubMeta'
@@ -135,7 +137,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       name: '@Author::KENTNL/MetaProvides::Package'
-      version: 1.14000001
+      version: 1.14000002
     -
       class: Dist::Zilla::Plugin::MetaData::BuiltWith
       config:
@@ -156,35 +158,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       name: '@Author::KENTNL/Git::GatherDir'
-      version: 2.009
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::KENTNL/License'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::KENTNL/MetaJSON'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::KENTNL/MetaYAML'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::KENTNL/Manifest'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::KENTNL/MetaTests'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::KENTNL/PodCoverageTests'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::KENTNL/PodSyntaxTests'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Author::KENTNL/ReportVersions::Tiny'
@@ -200,11 +202,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
       name: '@Author::KENTNL/Test::MinimumVersion'
-      version: 2.000002
+      version: 2.000004
     -
       class: Dist::Zilla::Plugin::Test::Compile
       name: '@Author::KENTNL/Test::Compile'
-      version: 2.001
+      version: 2.002
     -
       class: Dist::Zilla::Plugin::Test::Perl::Critic
       name: '@Author::KENTNL/Test::Perl::Critic'
@@ -212,15 +214,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::KENTNL/PruneCruft'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::KENTNL/ManifestSkip'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Author::KENTNL/PkgVersion'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: '@Author::KENTNL/PodWeaver'
@@ -228,11 +230,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::KENTNL/NextRelease'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::KENTNL/AutoPrereqs'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -240,7 +242,7 @@ x_Dist_Zilla:
           phase: develop
           type: requires
       name: '@Author::KENTNL/Prereqs/BundleDevelNeeds'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -248,7 +250,7 @@ x_Dist_Zilla:
           phase: develop
           type: recommends
       name: '@Author::KENTNL/Prereqs/BundleDevelRecommends'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -256,11 +258,11 @@ x_Dist_Zilla:
           phase: develop
           type: suggests
       name: '@Author::KENTNL/Prereqs/BundleDevelSuggests'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
       name: '@Author::KENTNL/Author::KENTNL::MinimumPerl'
-      version: 1.7.0
+      version: 1.7.3
     -
       class: Dist::Zilla::Plugin::Author::KENTNL::Prereqs::Latest::Selective
       name: '@Author::KENTNL/Author::KENTNL::Prereqs::Latest::Selective'
@@ -268,11 +270,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::KENTNL/Authority'
-      version: 1.007
+      version: 1.006
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@Author::KENTNL/ModuleBuild'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: '@Author::KENTNL/ReadmeFromPod'
@@ -284,7 +286,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::CPAN::Changes
       name: '@Author::KENTNL/Test::CPAN::Changes'
-      version: 0.005
+      version: 0.008
     -
       class: Dist::Zilla::Plugin::CheckExtraTests
       name: '@Author::KENTNL/CheckExtraTests'
@@ -292,35 +294,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::KENTNL/TestRelease'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::KENTNL/ConfirmRelease'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Author::KENTNL/Git::Check'
-      version: 2.009
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Author::KENTNL/Git::Tag/tag_master'
-      version: 2.009
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Author::KENTNL/Git::Commit'
-      version: 2.009
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::Git::CommitBuild
       name: '@Author::KENTNL/Git::CommitBuild'
-      version: 2.009
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Author::KENTNL/Git::Tag/tag_release'
-      version: 2.009
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::KENTNL/UploadToCPAN'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Twitter
       name: '@Author::KENTNL/Twitter'
@@ -332,34 +334,34 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300031
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300031
+      version: 4.300034
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300031
+    version: 4.300034
 x_authority: cpan:KENTNL
