--- a/dist.ini
+++ b/dist.ini
@@ -9,12 +9,6 @@ author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
-[Git::NextVersion::Sanitized / @Author::KENTNL/Git::NextVersion::Sanitized]
-first_version = 0.001000
-mantissa = 6
-normal_form = numify
-version_regexp = ^(.*)-source$
-
 [MetaConfig / @Author::KENTNL/MetaConfig]
 
 [GithubMeta / @Author::KENTNL/GithubMeta]
@@ -87,7 +81,9 @@ trailing_whitespace = 1
 
 [ManifestSkip / @Author::KENTNL/ManifestSkip]
 
-[PkgVersion / @Author::KENTNL/PkgVersion]
+[RewriteVersion::Sanitized / @Author::KENTNL/RewriteVersion::Sanitized]
+mantissa = 6
+normal_form = numify
 
 [PodWeaver / @Author::KENTNL/PodWeaver]
 replacer = replace_with_blank
@@ -145,6 +141,8 @@ tag_format = %v-source
 default_branch = master
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
+
+[BumpVersionAfterRelease / @Author::KENTNL/BumpVersionAfterRelease]
 
 [Git::Commit / @Author::KENTNL/commit_release_changes]
 allow_dirty_match = ^lib/
@@ -205,6 +203,7 @@ Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
 Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
+Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
 Dist::Zilla::Plugin::Git::Check = 0
@@ -213,7 +212,6 @@ Dist::Zilla::Plugin::Git::CommitBuild = 0
 Dist::Zilla::Plugin::Git::Contributors = 0.006
 Dist::Zilla::Plugin::Git::GatherDir = 0
 Dist::Zilla::Plugin::Git::NextRelease = 0.004000
-Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::License = 0
@@ -227,7 +225,6 @@ Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::MetaYAML::Minimal = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::ModuleBuild = 0
-Dist::Zilla::Plugin::PkgVersion = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
@@ -239,6 +236,7 @@ Dist::Zilla::Plugin::Prereqs::Upgrade = 0
 Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
+Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
 Dist::Zilla::Plugin::Test::Compile::PerFile = 0
