--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -160,7 +160,7 @@ stop_words = SHA1 associatively
 
 [Documentation::RequirePodAtEnd]
 
-[Documentation::RequirePodLinksIncludeText]
+[-Documentation::RequirePodLinksIncludeText]
 
 [-Documentation::RequirePodSections]
 
@@ -269,7 +269,7 @@ allowed_pragmata = diagnostics feature perlversion strict warnings utf8
 
 [Moose::RequireMakeImmutable]
 
-[NamingConventions::Capitalization]
+[-NamingConventions::Capitalization]
 
 [NamingConventions::ProhibitAmbiguousNames]
 
@@ -317,7 +317,7 @@ allowed_pragmata = diagnostics feature perlversion strict warnings utf8
 
 [Subroutines::ProhibitExcessComplexity]
 
-[Subroutines::ProhibitExplicitReturnUndef]
+[-Subroutines::ProhibitExplicitReturnUndef]
 
 [Subroutines::ProhibitExportingUndeclaredSubs]
 
@@ -373,7 +373,7 @@ base_max = 130
 
 [ValuesAndExpressions::ProhibitComplexVersion]
 
-[ValuesAndExpressions::ProhibitConstantPragma]
+[-ValuesAndExpressions::ProhibitConstantPragma]
 
 [ValuesAndExpressions::ProhibitDuplicateHashKeys]
 
